re PR libfortran/41683 (F2003 Repeat specification after P descriptor rejected)

2009-10-12  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/41683
	* io/format.c (parse_format_list): Allow a repeat specifier immediately
	after a P specifier.

From-SVN: r152695